; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_hb-backend.c_ghb_pause_resume_queue.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_hb-backend.c_ghb_pause_resume_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@h_queue = common dso_local global i32 0, align 4
@HB_STATE_PAUSED = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ghb_pause_resume_queue() #0 {
  %1 = alloca %struct.TYPE_3__, align 8
  %2 = load i32, i32* @h_queue, align 4
  %3 = call i32 @hb_get_state2(i32 %2, %struct.TYPE_3__* %1)
  %4 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @HB_STATE_PAUSED, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %10

8:                                                ; preds = %0
  %9 = call i32 (...) @ghb_resume_queue()
  br label %12

10:                                               ; preds = %0
  %11 = call i32 (...) @ghb_pause_queue()
  br label %12

12:                                               ; preds = %10, %8
  ret void
}

declare dso_local i32 @hb_get_state2(i32, %struct.TYPE_3__*) #1

declare dso_local i32 @ghb_resume_queue(...) #1

declare dso_local i32 @ghb_pause_queue(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
